--- a/IntelliFactory.WebSharper.Piglets.Test/IntelliFactory.WebSharper.Piglets.Test.fsproj
+++ b/IntelliFactory.WebSharper.Piglets.Test/IntelliFactory.WebSharper.Piglets.Test.fsproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
@@ -47,6 +47,5 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="WebSharper.targets" Condition="Exists('WebSharper.targets')" />
-  <Import Project="$(WEBSHARPER_HOME)/IntelliFactory.WebSharper.targets" />
+  <Import Project="../.build/lib/IntelliFactory.WebSharper.targets" />
 </Project>
