--- a/Piglets/IntelliFactory.WebSharper.Piglets.fsproj
+++ b/Piglets/IntelliFactory.WebSharper.Piglets.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Compile Include="Piglets.fsi" />
     <Compile Include="Piglets.fs" />
+    <Compile Include="Controls.fsi" />
+    <Compile Include="Controls.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
