--- a/ivy.xml
+++ b/ivy.xml
@@ -1,11 +1,7 @@
 <ivy-module version="2.0">
   <info organisation="IntelliFactory" module="websharper.piglets" revision="2.5" />
-  <publications>
-    <artifact name="IntelliFactory.WebSharper.Piglets" ext="xml" type="bin" />
-    <artifact name="IntelliFactory.WebSharper.Piglets" ext="dll" type="bin" />
-    <artifact name="IntelliFactory.WebSharper.Piglets" ext="pdb" type="debug" />
-  </publications>
   <dependencies>
-    <dependency name="WebSharper" rev="latest.integration" />
+    <dependency name="build" rev="latest.integration" />
+    <dependency name="websharper-security" rev="latest.integration" />
   </dependencies>
 </ivy-module>
