--- a/Piglets/IntelliFactory.WebSharper.Piglets.fsproj
+++ b/Piglets/IntelliFactory.WebSharper.Piglets.fsproj
@@ -5,30 +5,8 @@
     <Platform Condition="'$(Platform)' == ''">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{ab53bb7f-fbe4-4f4d-a817-7a7f20f2b06f}</ProjectGuid>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <Tailcalls>false</Tailcalls>
-    <OutputPath>bin/Debug</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <Tailcalls>true</Tailcalls>
-    <OutputPath>bin/Release</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
     <Name>IntelliFactory.WebSharper.Piglets</Name>
-    <RootNamespace>$(Name)</RootNamespace>
-    <AssemblyName>$(Name)</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\$(Configuration)\IntelliFactory.WebSharper.Piglets.xml</DocumentationFile>
+    <OutputPath>../build/net45</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Piglets.fsi" />
@@ -36,12 +14,8 @@
     <Compile Include="Controls.fsi" />
     <Compile Include="Controls.fs" />
   </ItemGroup>
-  <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core" />
-    <Reference Include="System" />
-    <Reference Include="System.Numerics" />
-    <Reference Include="System.Web" />
-  </ItemGroup>
-  <Import Project="../.build/lib/IntelliFactory.WebSharper.Sitelets.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" />
+  <Import Project="..\build\net45\$(Name).proj" />
+  <Target Name="Build" />
+  <Target Name="Clean" />
 </Project>
