--- a/IntelliFactory.WebSharper.Piglets.Test/IntelliFactory.WebSharper.Piglets.Test.fsproj
+++ b/IntelliFactory.WebSharper.Piglets.Test/IntelliFactory.WebSharper.Piglets.Test.fsproj
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{87297620-c340-470f-a347-21dfa030c502}</ProjectGuid>
     <Name>IntelliFactory.WebSharper.Piglets.Test</Name>
     <OutputPath>../build/net45</OutputPath>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.fs" />
