--- a/IntelliFactory.WebSharper.Piglets.Test/IntelliFactory.WebSharper.Piglets.Test.fsproj
+++ b/IntelliFactory.WebSharper.Piglets.Test/IntelliFactory.WebSharper.Piglets.Test.fsproj
@@ -26,5 +26,6 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
+  <Import Project="../packages/WebSharper.2.5.119.54/build/WebSharper.targets" />
   <Import Project="..\build\net45\$(Name).proj" />
 </Project>
