--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -77,6 +77,8 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VisualStudioVersion)' != '10.0'AND Exists('$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets')" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VisualStudioVersion)' == '10.0'" />
+  <Import Project="../packages/WebSharper.2.5.119.54/build/WebSharper.targets" />
+  <Import Project="..\build\net40\$(Name).proj" />
   <ProjectExtensions>
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
