Update project files

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -10,6 +10,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <WebSharperProject>Site</WebSharperProject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -77,7 +78,6 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VisualStudioVersion)' != '10.0'AND Exists('$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets')" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VisualStudioVersion)' == '10.0'" />
-  <Import Project="../packages/WebSharper.2.5.119.54/build/WebSharper.targets" />
   <Import Project="..\build\net40\$(Name).proj" />
   <ProjectExtensions>
     <VisualStudio>
