--- a/WebSharper.Piglets.Test/WebSharper.Piglets.Test.fsproj
+++ b/WebSharper.Piglets.Test/WebSharper.Piglets.Test.fsproj
@@ -1,23 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition="'$(Configuration)' == ''">Debug</Configuration>
-    <Platform Condition="'$(Platform)' == ''">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{ab53bb7f-fbe4-4f4d-a817-7a7f20f2b06f}</ProjectGuid>
-    <Name>IntelliFactory.WebSharper.Piglets</Name>
+    <ProjectGuid>{87297620-c340-470f-a347-21dfa030c502}</ProjectGuid>
+    <Name>WebSharper.Piglets.Test</Name>
     <OutputType>Library</OutputType>
     <OutputPath>../build/net45</OutputPath>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Piglets.fsi" />
-    <Compile Include="Piglets.fs" />
-    <Compile Include="Controls.fsi" />
-    <Compile Include="Controls.fs" />
+    <Compile Include="App.fs" />
+    <Compile Include="Site.fs" />
   </ItemGroup>
-  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '11.0'">
       <PropertyGroup Condition="Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')">
