--- a/Web/Web.config
+++ b/Web/Web.config
@@ -4,20 +4,20 @@
   <authentication mode="Forms" />
   <pages>
    <controls>
-    <add tagPrefix="WebSharper" namespace="IntelliFactory.WebSharper.Web" assembly="IntelliFactory.WebSharper.Web" />
+    <add tagPrefix="WebSharper" namespace="WebSharper.Web" assembly="WebSharper.Web" />
     <add tagPrefix="ws" namespace="Website" assembly="Website" />
    </controls>
   </pages>
   <httpModules>
-   <add name="WebSharper.Remoting" type="IntelliFactory.WebSharper.Web.RpcModule, IntelliFactory.WebSharper.Web" />
-   <add name="WebSharper.Sitelets" type="IntelliFactory.WebSharper.Sitelets.HttpModule, IntelliFactory.WebSharper.Sitelets" />
+   <add name="WebSharper.Remoting" type="WebSharper.Web.RpcModule, WebSharper.Web" />
+   <add name="WebSharper.Sitelets" type="WebSharper.Sitelets.HttpModule, WebSharper.Sitelets" />
   </httpModules>
  </system.web>
  <system.webServer>
   <validation validateIntegratedModeConfiguration="false" />
   <modules>
-   <add name="WebSharper.Remoting" type="IntelliFactory.WebSharper.Web.RpcModule, IntelliFactory.WebSharper.Web" />
-   <add name="WebSharper.Sitelets" type="IntelliFactory.WebSharper.Sitelets.HttpModule, IntelliFactory.WebSharper.Sitelets" />
+   <add name="WebSharper.Remoting" type="WebSharper.Web.RpcModule, WebSharper.Web" />
+   <add name="WebSharper.Sitelets" type="WebSharper.Sitelets.HttpModule, WebSharper.Sitelets" />
   </modules>
  </system.webServer>
  <runtime>
