--- a/WebSharper.Piglets.Test/WebSharper.Piglets.Test.fsproj
+++ b/WebSharper.Piglets.Test/WebSharper.Piglets.Test.fsproj
@@ -6,7 +6,8 @@
     <OutputType>Library</OutputType>
     <OutputPath>../build/net45</OutputPath>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.fs" />
