--- a/WebSharper.Piglets/WebSharper.Piglets.fsproj
+++ b/WebSharper.Piglets/WebSharper.Piglets.fsproj
@@ -9,7 +9,8 @@
     <OutputType>Library</OutputType>
     <OutputPath>../build/net45</OutputPath>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Piglets.fsi" />
@@ -17,7 +18,6 @@
     <Compile Include="Controls.fsi" />
     <Compile Include="Controls.fs" />
   </ItemGroup>
-  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '11.0'">
       <PropertyGroup Condition="Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')">
