--- a/ivy.xml
+++ b/ivy.xml
@@ -2,6 +2,7 @@
   <info organisation="IntelliFactory" module="websharper.piglets" revision="3.0" />
   <dependencies>
     <dependency name="websharper" rev="latest.integration" />
+    <dependency name="websharper.html" rev="latest.integration" />
     <dependency name="intellifactory.reactive" rev="latest.integration" />
   </dependencies>
 </ivy-module>
