--- a/ivy.xml
+++ b/ivy.xml
@@ -1,8 +1,8 @@
 <ivy-module version="2.0">
-  <info organisation="IntelliFactory" module="websharper.piglets" revision="3.0" />
+  <info organisation="IntelliFactory" module="zafir.piglets" revision="3.0" />
   <dependencies>
-    <dependency name="websharper" rev="latest.integration" />
-    <dependency name="websharper.html" rev="latest.integration" />
-    <dependency name="intellifactory.reactive" rev="latest.integration" />
+    <dependency name="zafir" rev="latest.integration" />
+    <dependency name="zafir.html" rev="latest.integration" />
+    <dependency name="zafir.reactive" rev="latest.integration" />
   </dependencies>
 </ivy-module>
