--- a/WebSharper.Piglets/WebSharper.Piglets.fsproj
+++ b/WebSharper.Piglets/WebSharper.Piglets.fsproj
@@ -12,5 +12,6 @@
     <Compile Include="Controls.fsi" />
     <Compile Include="Controls.fs" />
   </ItemGroup>
+  <Import Project="..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets" Condition="Exists('..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets')" />
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
